[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Tree.gd" type="Script" id=1]
[ext_resource path="res://Images/tree (1).png" type="Texture" id=2]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/tree (11).png" type="Texture" id=4]
[ext_resource path="res://Sounds/qubodupImpactStone.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 13 )

[node name="Tree" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 9, 0 )
scale = Vector2( 1.40625, 1.5625 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9, 0 )
scale = Vector2( 1.40625, 1.5625 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( -5, -3.8147e-06 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 16, 35 )
shape = SubResource( 1 )

[node name="Grow" type="Timer" parent="."]
one_shot = true

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Grow" to="." method="_on_Grow_timeout"]
[connection signal="finished" from="Hit" to="." method="_on_Hit_finished"]
